--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "only",
   "version": "0.0.2",
   "description": "return whitelisted properties of an object",
-  "keywords": ["utility", "util", "object", "whitelist"],
+  "keywords": ["object", "util", "utility", "whitelist"],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
   "license": "MIT",
-  "repository": "git://github.com/visionmedia/node-only",
+  "repository": "tj/node-only",
+  "main": "index",
   "scripts": {
     "test": "mocha"
   },
-  "dependencies": {},
   "devDependencies": {
     "mocha": "^4.0.1",
     "should": "^13.1.2"
-  },
-  "main": "index"
+  }
 }
