--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
-  "name": "only",
-  "version": "0.0.2",
-  "description": "return whitelisted properties of an object",
-  "keywords": ["object", "util", "utility", "whitelist"],
+  "name": "@joelwallis/only",
+  "version": "1.0.0",
+  "description": "Return whitelisted properties of an object",
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
+  "contributors": [
+    "Joel Wallis Jucá <joelwallis@gmail.com>"
+  ],
+  "repository": "joelwallis/only",
   "license": "MIT",
-  "repository": "tj/node-only",
+  "keywords": [
+    "object",
+    "util",
+    "utility",
+    "whitelist"
+  ],
   "main": "index",
+  "files": [
+    "index.js"
+  ],
   "scripts": {
     "test": "mocha"
   },
