--- a/package.json
+++ b/package.json
@@ -16,13 +16,21 @@
   ],
   "main": "index",
   "files": [
-    "index.js"
+    "index.js",
+    "only.js",
+    "only.min.js"
   ],
   "scripts": {
+    "build": "browserify index.js -o only.js",
+    "build:min": "browserify -t uglifyify index.js | uglifyjs > only.min.js",
+    "build:all": "for s in build build:min; do npm run $s; done",
     "test": "mocha"
   },
   "devDependencies": {
+    "browserify": "^16.1.0",
     "mocha": "^4.0.1",
-    "should": "^13.1.2"
+    "should": "^13.1.2",
+    "uglify-js": "^3.3.12",
+    "uglifyify": "^4.0.5"
   }
 }
